@startuml entity relationship diagram
entity "user" as user {
  *id : UUID
  --
  email : VARCHAR
  name : VARCHAR
  password : BYTEA
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "project" as project {
  *id : UUID
  --
  name : VARCHAR
  description : TEXT
  banner_path: TEXT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "model" as model {
  *id : UUID
  --
  project_id : UUID
  name : VARCHAR
  description : TEXT
  scale: DOUBLE
  file_path : TEXT
  version : INT
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity "user_model_workspace" as user_model_workspace {
  *model_id : UUID
  *user_id : UUID
  --
  name : VARCHAR
  description : TEXT
  file_path : TEXT
  version : INT
  updated_at : TIMESTAMPTZ
}

entity "camera" as camera {
  *id : UUID
  *model_id : UUID
  --
  name : VARCHAR
  angle_x : DOUBLE
  angle_y : DOUBLE
  angle_z : DOUBLE
  angle_w : DOUBLE
  pos_x : DOUBLE
  pos_y : DOUBLE
  pos_z : DOUBLE
  is_snapshot : BOOLEAN
}

entity "project_user_role" as project_user_role {
  *user_id : UUID
  *project_id : UUID
  --
  role : Enum (Owner, Collaborator)
}

user ||--o{ project_user_role
project ||--o{ project_user_role

model }o--|| project
user_model_workspace }o--|| user
user_model_workspace }o--|| model

camera }o--|| model
camera }o--|| user_model_workspace
@enduml
